--- a/WebApplication1/WebApplication1/Views/HelloWorld/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/HelloWorld/Index.cshtml
@@ -1,11 +1,12 @@
-﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+﻿@*@{
+        Layout = "~/Views/Shared/_Layout.cshtml";
+    }*@
+
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Products List";
 }
 
-<h2>Index</h2>
+<h2>Products List</h2>
 
 <p>Hello from our View Template!</p>
 
